@@ -21,6 +21,7 @@ class User < ActiveRecord::Base
   serialize :email_notifications, Hash
   serialize :hidden_project_ids, Array
   serialize :colors, Hash
+  serialize :settings, Hash
 
   # Named Scopes
   scope :current, conditions: { deleted: false }
