@@ -3,7 +3,7 @@
     <td><%= check_box_tag 'status[]', 'planned', params[:status] ? params[:status].include?('planned') : true %></td>
     <td><%= display_completion(false) %></td>
     <td class="planned" style="padding-right:10px">Not Completed</td>
-    
+
     <td><%= check_box_tag 'status[]', 'completed', params[:status] ? params[:status].include?('completed') : true %></td>
     <td><%= display_completion(true) %></td>
     <td class="completed" style="padding-right:10px">Completed</td>
