@@ -1,0 +1,5 @@
+class AddSettingsToUsers < ActiveRecord::Migration
+  def change
+    add_column :users, :settings, :text
+  end
+end
